conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur()== True {
   ^Conditions:7: error: illegal start of simple expression
	}
        ^